@@ -1,4 +1,6 @@
-@comment $NetBSD: PLIST,v 1.2 2004/01/10 01:27:00 jlam Exp $
+@comment $NetBSD: PLIST,v 1.3 2004/01/13 09:03:15 jlam Exp $
+bin/saslcache
+bin/testsaslauthd
 etc/rc.d/saslauthd
 man/man8/saslauthd.8
 sbin/saslauthd
